<resources>
    <string name="app_name">騒音耳栓</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">名前</string>
    <string name="hint_frequencies">周波数帯</string>
    <string name="helper_name">対象となる音の名前</string>
    <string name="helper_frequencies">10-100,1995-2005</string>
    <string name="save">保存</string>
    <string name="delete">削除</string>
    <string name="description_start_stop">start stop</string>
    <string name="noise_reduction">自動ノイズ低減</string>
    <string name="noise_reduction_public_transportation">公共交通機関ノイズ低減</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="delete_all">すべて削除</string>
    <string name="latitude_title">緯度:</string>
    <string name="longitude_title">経度:</string>
    <string name="train_name">列車情報:</string>
    <string name="station_name">駅名</string>
    <string name="airplane_name">飛行機情報:</string>
    <string name="search_train_onoff">周辺列車探索</string>
    <string name="station_csv_file">station20200316free.csv</string>
    <string name="join_csv_file">join20200306.csv</string>
    <string name="public_transport_gain_name">公共交通機関騒音</string>
    <string name="public_transport_gain_freq">100-800</string>
    <string name="msg_station_not_found_in_db">DB駅情報なし</string>
    <string name="station_api_url">https://api.odpt.org/api/v4/odpt:Station</string>
    <string name="train_api_url">https://api.odpt.org/api/v4/odpt:Train</string>
    <string name="flight_info_arrival">https://api.odpt.org/api/v4/odpt:FlightInformationArrival</string>
    <string name="flight_info_departure">https://api.odpt.org/api/v4/odpt:FlightInformationDeparture</string>
    <string name="msg_not_inside_hnd_airport">羽田空港外</string>
    <string name="near_station">最寄り駅:</string>
    <string name="text_bluetooth_mic">Bluetooth マイク</string>
    <string name="ear_plug">耳栓モード</string>
    <string name="refreshTimeTitle">最終データ取得時刻:</string>
    <string name="termTitle">利用規約</string>
    <string name="termBody">本アプリケーション等が利用する公共交通データは、東京公共交通オープンデータチャレンジにおいて提供されるものです。公共交通事業者により提供されたデータを元にしていますが、必ずしも正確・完全なものとは限りません。本アプリケーションの表示内容について、公共交通事業者への直接の問合せは行わないでください。本アプリケーションに関するお問い合わせは、以下のメールアドレスにお願いします。wiev@googlegroups.com
</string>
    <string name="api_key">apitoken</string>
</resources>
