<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/activity_main">

        <ImageButton
            android:id="@+id/onOffButton"
            android:layout_width="414dp"
            android:layout_height="239dp"
            android:background="@null"
            android:contentDescription="@string/description_start_stop"
            android:src="@drawable/ic_play_circle_outline_200dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textNr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/noise_reduction"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/onOffButton" />

        <Switch
            android:id="@+id/switchNr"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textNr"
            app:layout_constraintTop_toBottomOf="@+id/onOffButton" />

        <TextView
            android:id="@+id/textPublicTransportaionNr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/noise_reduction_public_transportation"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNr" />

        <Switch
            android:id="@+id/switchNrTransportation"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textPublicTransportaionNr"
            app:layout_constraintTop_toBottomOf="@+id/switchNr" />

        <TextView
            android:id="@+id/textBluetoothMic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/text_bluetooth_mic"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPublicTransportaionNr" />

        <Switch
            android:id="@+id/switchBluetoothMic"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textBluetoothMic"
            app:layout_constraintTop_toBottomOf="@+id/switchNrTransportation" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textBluetoothMic"
            tools:listitem="@layout/recyclerview_item" />

        <TextView
            android:id="@+id/textLat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude_title"
            app:layout_constraintStart_toStartOf="@+id/recyclerview"
            app:layout_constraintTop_toBottomOf="@+id/recyclerview"
            />

        <TextView
            android:id="@+id/latitudeValue"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:maxLines="1"
            app:layout_constraintLeft_toRightOf="@+id/textLat"
            app:layout_constraintTop_toBottomOf="@+id/recyclerview"
            tools:layout_editor_absoluteX="32dp" />

        <TextView
            android:id="@+id/textLng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/longitude_title"
            app:layout_constraintLeft_toRightOf="@+id/latitudeValue"
            app:layout_constraintTop_toBottomOf="@+id/recyclerview"
            />

        <TextView
            android:id="@+id/longitudeValue"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:maxLines="1"
            app:layout_constraintLeft_toRightOf="@+id/textLng"
            app:layout_constraintTop_toBottomOf="@+id/recyclerview"
            />
        <TextView
            android:id="@+id/textNearStation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/near_station"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textLat"
            />
        <TextView
            android:id="@+id/near_station"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:maxLines="1"
            app:layout_constraintLeft_toRightOf="@+id/textNearStation"
            app:layout_constraintTop_toBottomOf="@+id/textLat"
            />
        <TextView
            android:id="@+id/textTrainInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/train_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNearStation"
            />
        <TextView
            android:id="@+id/train_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:maxLines="1"
            app:layout_constraintLeft_toRightOf="@+id/textTrainInfo"
            app:layout_constraintTop_toBottomOf="@+id/textNearStation"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>